--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyOFTda5LJvJ8ECcg4qDXUhn",
+      "authorship_tag": "ABX9TyON5yXE9zC0o4eTokW0olsS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,12 +60,8 @@
       "source": [
         "---\n",
         "# 1. Problem Defination\n",
-        "## Image Classification problem\n",
-        "Creating a deep learning model that classifies cars and trees on image dataset collected from Areal imaging on Google Earth Pro and testing its performance.\n",
-        "## Dataset collected \n",
-        "Addis Ababa \n",
-        "\n",
-        "Stirling"
+        "The objective of this project is to create a deep learning model that classifies images containing cars and trees. The dataset for this image classification problem consists of aerial images collected from Google Earth Pro, focusing on two distinct geographic locations: Addis Ababa and Stirling.\n",
+        "\n"
       ],
       "metadata": {
         "id": "mN5V5jz1yz4B"
@@ -76,10 +72,7 @@
       "source": [
         "---\n",
         "# 2. Github repository\n",
-        "repository created\n",
-        "\n",
-        "###Invitation sent usernames\n",
-        "\n",
+        "A GitHub repository has been created to manage the project, track changes, and collaborate effectively. Invitations have been sent to the following usernames\n",
         "1. sandyCarmichael\n",
         "2. vak000\n",
         "3. jeferssonalex"
@@ -93,21 +86,20 @@
       "source": [
         "---\n",
         "# 3. Dataset Creation\n",
-        "##Created dataset containing 400 images on each subset\n",
-        "## Addis Ababa Labeled Images\n",
-        "####Addis Ababa Car (400)\n",
-        "####Addis Ababa Tree (400)\n",
-        "####Addis Ababa Neither (400)\n",
-        "## Stirling Labeled Images\n",
-        "####Stirling Car (400)\n",
-        "####Stirling Tree (400)\n",
-        "####Stirling Neither (400)\n",
+        "The dataset contains 2,400 labeled images, with 1,200 images collected from each location. The images are grouped into the following categories:\n",
+        "##Addis Ababa Labeled Images:\n",
         "\n",
-        "The images are extracted from Google Earth Pro\n",
+        "* Addis Ababa Car (400)\n",
+        "* Addis Ababa Tree (400)\n",
+        "* Addis Ababa Neither (400)\n",
+        "  \n",
+        "##Stirling Labeled Images:\n",
         "\n",
-        "The images are collected from Addis Ababa and Stirling. \n",
+        "* Stirling Car (400)\n",
+        "* Stirling Tree (400)\n",
+        "* Stirling Neither (400)\n",
         "\n",
-        "*Images taken at eye altitude of 200 meter from the surface of the earth on march 2023.*\n",
+        "*The images are extracted from Google Earth Pro, with each taken at an eye altitude of 200 meters above the earth's surface. The images were collected in March 2023.*\n",
         "\n"
       ],
       "metadata": {
@@ -151,11 +143,10 @@
         "import torch.optim as optim\n",
         "import torchvision.models as models\n",
         "from torch.utils.data import random_split\n",
-        "\n",
-        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n"
+        "import matplotlib.pyplot as plt\n",
+        "\n"
       ],
       "metadata": {
         "id": "QeUEvuqQYnDW"
