--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyON5yXE9zC0o4eTokW0olsS",
+      "authorship_tag": "ABX9TyPQ+yM6wF+Ot3yv3oSJYytM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,6 +121,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "C_9QrafKXULl"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "Importing necessary modules"
       ],
@@ -132,21 +139,21 @@
       "cell_type": "code",
       "source": [
         "# Importing necessary libraries and modules\n",
-        "from torchvision.transforms import RandomHorizontalFlip, RandomRotation, GaussianBlur\n",
         "import os\n",
-        "from PIL import Image\n",
         "import torch\n",
-        "import torchvision\n",
-        "from torchvision import transforms\n",
-        "from torch.utils.data import DataLoader\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from PIL import Image\n",
+        "\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
-        "import torchvision.models as models\n",
-        "from torch.utils.data import random_split\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n"
+        "from torchvision import models\n",
+        "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score\n",
+        "from sklearn.preprocessing import LabelBinarizer\n",
+        "from torch.utils.data import random_split, DataLoader\n",
+        "from torch.optim.lr_scheduler import StepLR\n",
+        "from torchvision.transforms import RandomHorizontalFlip, RandomRotation, GaussianBlur, transforms\n"
       ],
       "metadata": {
         "id": "QeUEvuqQYnDW"
