--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyPQ+yM6wF+Ot3yv3oSJYytM",
+      "authorship_tag": "ABX9TyNKIcobqXkElTk/DYOfg0Am",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -175,10 +175,8 @@
       "cell_type": "code",
       "source": [
         "# Directory path of image datasets\n",
-        "stir_tree = '/content/drive/MyDrive/Deep learning/dataset11/dataset/Stirling_Tree'\n",
-        "stir_car = '/content/drive/MyDrive/Deep learning/dataset11/dataset/Stirling_Car'\n",
-        "addis_tree = '/content/drive/MyDrive/Deep learning/dataset11/dataset/Addis_Ababa_Tree'\n",
-        "addis_car = '/content/drive/MyDrive/Deep learning/dataset11/dataset/Addis_Ababa_Car'"
+        "addis_path = '/content/drive/MyDrive/Deep learning/dataset/addis_ababa'\n",
+        "stir_path = '/content/drive/MyDrive/Deep learning/dataset/stirling'"
       ],
       "metadata": {
         "id": "jDqm-d1v_P-O"
@@ -368,11 +366,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Data cleaning and preprocessing before starting building the model is necessary to ensure it is in a suitable format for training.\n",
+        "Data cleaning and preprocessing play a crucial role in preparing the dataset for building the deep learning model, ensuring the data is in a suitable format for training. In this project, some essential preprocessing steps are carried out:\n",
         "\n",
-        "Resizing the images to have uniform dimension is necessary.\n",
+        "1. Resizing the images: To maintain uniform dimensions across the dataset, all images are resized to a standard size of 224x224 pixels using the Resize transform in the PyTorch library.\n",
         "\n",
-        "Converting the images to pytorch tensor format."
+        "2. Converting images to PyTorch tensor format: The images are converted to PyTorch tensor format to enable compatibility with the deep learning framework.\n",
+        "\n",
+        "These transformations are applied to the images as follows:\n",
+        "\n",
+        "1. Define a custom dataset class that inherits from the PyTorch Dataset class.\n",
+        "2. Implement the dataset class's __init__ method to load the image paths and labels from the designated folders, labeled '0' and '1'.\n",
+        "3. In the __getitem__ method of the custom dataset class, apply the necessary transformations, including resizing and converting the images to PyTorch tensors using the ToTensor transform.\n"
       ],
       "metadata": {
         "id": "n3seaCSIMEE9"
@@ -380,13 +384,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "The transformations applied to the images include resizing the images to a uniform size of 224x224 pixels using the Resize transform and converting the images to PyTorch tensors using the ToTensor transform.\n",
-        "\n",
-        "*The dataset contains images that are located in two folders labeled '0' and '1'. The dataset class loads the image paths and labels from the folders and applies some transformations to the images before returning them as PyTorch tensors along with their corresponding labels.*\n",
-        "\n",
-        "This code provides a basic framework for loading a custom dataset of images and applying some standard transformations to them before feeding them into a PyTorch model for training or inference."
-      ],
+      "source": [],
       "metadata": {
         "id": "ikOCAGVcKfNO"
       }
