--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyNKIcobqXkElTk/DYOfg0Am",
+      "authorship_tag": "ABX9TyNajMFhOysflDVY/i59lAO4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,21 +197,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "\"\"\"the dataset is locate on my drive therefore it can not be accessed directly from github\n",
-        "may be i will find a way to access the zip file in github later \"\"\"\n",
-        "\n",
-        "# A function for generating dataframe of lables and extracting csv\n",
-        "def labeler_csv(path):\n",
-        "  data = []\n",
-        "  for folder in os.listdir(path):\n",
-        "      for file in os.listdir(os.path.join(path, folder)):\n",
-        "        if file != '.DS_Store':\n",
-        "          data.append([os.path.join(file), folder])\n",
-        "  df = pd.DataFrame(data, columns=['filename', 'label'])\n",
-        "  # df.to_csv(f'/content/drive/MyDrive/{path}.csv', index=False)\n",
-        "  return(df.head(2))"
-      ],
+      "source": [],
       "metadata": {
         "id": "kEpo1o7NLjQN"
       },
@@ -220,9 +206,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "display(labeler_csv(stir_tree))"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -394,31 +378,37 @@
       "source": [
         "# Define the transformations to be applied to the images\n",
         "transform = transforms.Compose([\n",
-        "    transforms.Resize((224, 224)), # resize the images to 224x224 to have uniformity\n",
-        "    transforms.ToTensor(), # convert the images to PyTorch tensors\n",
+        "    transforms.Resize((224, 224)), # resizing the images to a uniform size of 224x224 pixels.\n",
+        "    transforms.RandomHorizontalFlip(p=0.5),  # horizontal flip with a probability of 0.5\n",
+        "    transforms.ColorJitter(brightness=0.1, contrast=0.1, saturation=0.1, hue=0.1),\n",
+        "    transforms.RandomRotation(degrees=10),  # random rotation of +/- 10 degrees\n",
+        "    transforms.RandomApply([GaussianBlur(kernel_size=3, sigma=(0.1, 2.0))], p=0.5), # Gaussian blur with a probability of 0.5\n",
+        "    transforms.ToTensor(), # converting images to PyTorch tensors\n",
+        "    # Normalize using ImageNet mean and std values\n",
+        "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
         "])\n",
+        "\n",
+        "\n",
+        "# Define the dataset class\n",
         "\n",
         "# Define the dataset class\n",
         "class CustomDataset(torch.utils.data.Dataset):\n",
-        "    # initializes the dataset object and loads the image paths and labels from the two folders\n",
         "    def __init__(self, root_dir):\n",
         "        self.root_dir = root_dir\n",
-        "        # image paths\n",
         "        self.image_paths = []\n",
-        "        # label path\n",
         "        self.labels = []\n",
+        "        self.label_mapping = {'car': 0, 'tree': 1, 'negative': 2}\n",
         "        \n",
-        "        # Load the image paths and labels from the two folders\n",
-        "        for label in ['0', '1']:\n",
-        "            folder_path = f'{root_dir}/{label}/'\n",
+        "        # Load the image paths and labels from the folders\n",
+        "        for label in ['car', 'tree', 'negative']:\n",
+        "            folder_path = os.path.join(root_dir, label)\n",
         "            for image_path in os.listdir(folder_path):\n",
-        "                self.image_paths.append(f'{folder_path}/{image_path}')\n",
-        "                self.labels.append(int(label))\n",
+        "                self.image_paths.append(os.path.join(folder_path, image_path))\n",
+        "                self.labels.append(self.label_mapping[label])\n",
         "\n",
-        "    # Number of images    \n",
         "    def __len__(self):\n",
         "        return len(self.image_paths)\n",
-        "    # Loading individual images with lables\n",
+        "\n",
         "    def __getitem__(self, idx):\n",
         "        # Load the image and apply the transformations\n",
         "        image_path = self.image_paths[idx]\n",
@@ -428,7 +418,19 @@
         "        # Get the label of the image\n",
         "        label = self.labels[idx]\n",
         "        \n",
-        "        return image, label"
+        "        return image, label\n",
+        "\n",
+        "\n",
+        "# Create the dataset objects\n",
+        "stir_dataset = CustomDataset(stir_path)\n",
+        "addis_dataset = CustomDataset(addis_path)\n",
+        "\n",
+        "\n",
+        "# Create the dataloader objects for each dataset\n",
+        "batch_size = 32 # 64\n",
+        "\n",
+        "stir_dataloader = DataLoader(stir_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
+        "addis_dataloader = DataLoader(addis_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n"
       ],
       "metadata": {
         "id": "VM-ZZVCJ-c_k"
@@ -448,28 +450,71 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define plotting function\n",
-        "def plot_dataset(positive, negative, dataset):\n",
-        "    labels_map = {\n",
-        "        0: negative,\n",
-        "        1: positive\n",
-        "    }\n",
-        "    # Selecting some images for preview\n",
+        "\n",
+        "def denormalize(tensor, mean, std):\n",
+        "    for t, m, s in zip(tensor, mean, std):\n",
+        "        t.mul_(s).add_(m)\n",
+        "    return tensor\n",
+        "\n",
+        "def preview_images(dataset, labels_map, cols=5, rows=3):\n",
         "    figure = plt.figure(figsize=(8, 5))\n",
-        "    cols, rows = 5, 3\n",
+        "    mean = np.array([0.485, 0.456, 0.406])\n",
+        "    std = np.array([0.229, 0.224, 0.225])\n",
+        "    \n",
         "    for i in range(1, cols * rows + 1):\n",
         "        sample_idx = torch.randint(len(dataset), size=(1,)).item() # Randomly selected\n",
-        "        #print(sample_idx)\n",
         "        img, label = dataset[sample_idx]\n",
         "        figure.add_subplot(rows, cols, i)\n",
         "        plt.title(labels_map[label])\n",
         "        plt.axis(\"off\")\n",
-        "        new_img = np.transpose(img, (1, 2, 0))\n",
+        "        img_denorm = denormalize(img.clone(), mean, std)\n",
+        "        new_img = np.transpose(img_denorm.numpy(), (1, 2, 0))\n",
         "        plt.imshow(new_img.squeeze())\n",
-        "    plt.show()"
+        "    plt.show()\n",
+        "\n",
+        "# Define the labels_map\n",
+        "labels_map = {\n",
+        "    0 : 'Car',\n",
+        "    1 : 'Tree',\n",
+        "    2 : 'Negative'\n",
+        "}\n",
+        "\n"
       ],
       "metadata": {
         "id": "yY8h2XkAQaID"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Plotting the results"
+      ],
+      "metadata": {
+        "id": "u_Jina-edyST"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Preview images from the stir_dataset\n",
+        "preview_images(stir_dataset, labels_map)"
+      ],
+      "metadata": {
+        "id": "s8726q8Ud3zs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Preview images from the addis_dataset\n",
+        "preview_images(addis_dataset, labels_map)"
+      ],
+      "metadata": {
+        "id": "DIGC51LZd7x5"
       },
       "execution_count": null,
       "outputs": []
