--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyM37Rl0H4WKIKHiwc7wxcD/",
+      "authorship_tag": "ABX9TyPNyzkKOwZEYN8a+3VKZ9i3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
         "---\n",
         "# 1. Problem Defination\n",
         "The objective of this project is to create a deep learning model that classifies images containing cars and trees. The dataset for this image classification problem consists of aerial images collected from Google Earth Pro, focusing on two distinct geographic locations: Addis Ababa and Stirling.\n",
-        "\n"
+        "---\n"
       ],
       "metadata": {
         "id": "mN5V5jz1yz4B"
@@ -158,16 +158,7 @@
       "metadata": {
         "id": "QeUEvuqQYnDW"
       },
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "UF-pBlbaoofA"
-      },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -183,43 +174,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# Directory path of image datasets\n",
-        "addis_path = '/content/drive/MyDrive/Deep learning/dataset/addis_ababa'\n",
-        "stir_path = '/content/drive/MyDrive/Deep learning/dataset/stirling'"
+        "# # Directory path of image datasets\n",
+        "# addis_path = '/content/drive/MyDrive/Deep learning/dataset/addis_ababa'\n",
+        "# stir_path = '/content/drive/MyDrive/Deep learning/dataset/stirling'\n",
+        "\n",
+        "# Local path\n",
+        "addis_path = \"H:\\\\My Drive\\\\Deep learning\\\\dataset\\\\addis_ababa\"\n",
+        "stir_path = \"H:\\\\My Drive\\\\Deep learning\\\\dataset\\\\stirling\""
       ],
       "metadata": {
         "id": "jDqm-d1v_P-O"
       },
-      "execution_count": 16,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Creating label dataframe for our datasets \n",
-        "\n",
-        "Extracting it to a csv file format"
-      ],
-      "metadata": {
-        "id": "Rdvep84hLYv8"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "kEpo1o7NLjQN"
-      },
-      "execution_count": 16,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2JRpiSUtDLME"
-      },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,13 +205,6 @@
       ],
       "metadata": {
         "id": "n3seaCSIMEE9"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "ikOCAGVcKfNO"
       }
     },
     {
@@ -310,8 +269,42 @@
       "metadata": {
         "id": "VM-ZZVCJ-c_k"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UF-pBlbaoofA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "56OKMO3wAD_1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2JRpiSUtDLME"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ikOCAGVcKfNO"
+      }
     },
     {
       "cell_type": "markdown",
@@ -358,7 +351,7 @@
       "metadata": {
         "id": "yY8h2XkAQaID"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -384,7 +377,7 @@
         },
         "outputId": "f7ebf27c-302b-4f35-95d6-e1dd2684f29b"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -412,7 +405,7 @@
         },
         "outputId": "20cf8a32-17ae-48a9-c3a2-e41dddd067f0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -460,7 +453,7 @@
       "metadata": {
         "id": "0PVox68eGJb9"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -478,7 +471,7 @@
       "metadata": {
         "id": "XBEN_qR8L1Zh"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,7 +489,7 @@
       "metadata": {
         "id": "S0VeoqDjTMT_"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -514,7 +507,7 @@
       "metadata": {
         "id": "FYGziVBNVyEp"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -532,7 +525,7 @@
       "metadata": {
         "id": "ArD3_ocM-SNq"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -565,7 +558,7 @@
       "metadata": {
         "id": "s6VgwsEN4qw0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -675,7 +668,7 @@
       "metadata": {
         "id": "IUMjx4D-MAso"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -708,7 +701,7 @@
       "metadata": {
         "id": "pOubfJDe4q7s"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +710,7 @@
       "metadata": {
         "id": "XKu4GwKGhsy6"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -737,7 +730,7 @@
       "metadata": {
         "id": "Ib6c5r3H83hb"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -773,7 +766,7 @@
         "id": "AgvYdDPUp91U",
         "outputId": "c9072d9f-08e1-42bd-f5b3-889e73b87428"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -833,7 +826,7 @@
       "metadata": {
         "id": "BJXMsYwJ5PTb"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -850,7 +843,7 @@
         },
         "outputId": "998e12bd-453b-4f64-8c0f-561391f71e01"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -885,7 +878,7 @@
         },
         "outputId": "3fd7911b-425e-4428-b5db-aead670cc84f"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,7 +905,7 @@
       "metadata": {
         "id": "mG28uicolb5F"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -921,7 +914,7 @@
       "metadata": {
         "id": "LFZt7ehPlb7h"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -930,7 +923,7 @@
       "metadata": {
         "id": "nr10kYqVlb90"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -939,7 +932,7 @@
       "metadata": {
         "id": "3ArUl84olcAb"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -948,7 +941,7 @@
       "metadata": {
         "id": "YmSn-fNwlcD5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -957,7 +950,7 @@
       "metadata": {
         "id": "lWiraszslcF6"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -966,7 +959,7 @@
       "metadata": {
         "id": "C20I1aRHlcId"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -975,7 +968,7 @@
       "metadata": {
         "id": "xfYxYBnIlcLE"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -984,7 +977,7 @@
       "metadata": {
         "id": "MEta3PhplcOf"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -993,7 +986,7 @@
       "metadata": {
         "id": "efmFcxCA6yHK"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1027,7 +1020,7 @@
       "metadata": {
         "id": "RR1DzZSj4q-c"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1045,7 +1038,7 @@
       "metadata": {
         "id": "6n-4ATvS6NIH"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1054,7 +1047,7 @@
       "metadata": {
         "id": "U4gHBvd84rB5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1081,7 +1074,7 @@
       "metadata": {
         "id": "Y1Y5elG5zTgs"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1090,7 +1083,7 @@
       "metadata": {
         "id": "OEqbIbCEDgAJ"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1116,7 +1109,7 @@
         "id": "RKj5o8k-wqT3",
         "outputId": "8e37adcd-13ea-4f12-b460-9a845237daff"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
