--- a/ITNPAI1_3071806.ipynb
+++ b/ITNPAI1_3071806.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/workingbetter/ITNPAI1/blob/main/ITNPAI1_3071806.ipynb",
-      "authorship_tag": "ABX9TyPNyzkKOwZEYN8a+3VKZ9i3",
+      "authorship_tag": "ABX9TyPE7P78duKDzNhg7ZgwC1fA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "QeUEvuqQYnDW"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -185,7 +185,7 @@
       "metadata": {
         "id": "jDqm-d1v_P-O"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -224,8 +224,6 @@
         "\n",
         "\n",
         "# Define the dataset class\n",
-        "\n",
-        "# Define the dataset class\n",
         "class CustomDataset(torch.utils.data.Dataset):\n",
         "    def __init__(self, root_dir):\n",
         "        self.root_dir = root_dir\n",
@@ -244,67 +242,33 @@
         "        return len(self.image_paths)\n",
         "\n",
         "    def __getitem__(self, idx):\n",
-        "        # Load the image and apply the transformations\n",
+        "        # Load the image\n",
         "        image_path = self.image_paths[idx]\n",
         "        image = Image.open(image_path)\n",
+        "\n",
+        "        # Apply the transformations\n",
         "        image = transform(image)\n",
-        "        \n",
         "        # Get the label of the image\n",
         "        label = self.labels[idx]\n",
         "        \n",
         "        return image, label\n",
         "\n",
-        "\n",
         "# Create the dataset objects\n",
         "stir_dataset = CustomDataset(stir_path)\n",
         "addis_dataset = CustomDataset(addis_path)\n",
         "\n",
-        "\n",
         "# Create the dataloader objects for each dataset\n",
-        "batch_size = 32 # 64\n",
+        "batch_size = 32 # 32\n",
         "\n",
-        "stir_dataloader = DataLoader(stir_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
-        "addis_dataloader = DataLoader(addis_dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n"
+        "stir_dataloader = DataLoader(stir_dataset, batch_size=batch_size, shuffle=True)#, num_workers=2)\n",
+        "addis_dataloader = DataLoader(addis_dataset, batch_size=batch_size, shuffle=True)#, num_workers=2)\n",
+        "\n"
       ],
       "metadata": {
         "id": "VM-ZZVCJ-c_k"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "UF-pBlbaoofA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "56OKMO3wAD_1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2JRpiSUtDLME"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "ikOCAGVcKfNO"
-      }
     },
     {
       "cell_type": "markdown",
@@ -353,6 +317,40 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UF-pBlbaoofA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "56OKMO3wAD_1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2JRpiSUtDLME"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ikOCAGVcKfNO"
+      }
     },
     {
       "cell_type": "markdown",
